--- a/package.json
+++ b/package.json
@@ -1,29 +1,23 @@
 {
-  "name": "coder-thoughts",
+  "name": "mern-social-media",
   "version": "1.0.0",
-  "description": "MERN app",
   "main": "server/server.js",
   "scripts": {
-    "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "cd server && npm start",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "seed": "cd server && npm run seed"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/scottskinn/Coder-thoughts.git"
+    "seed": "cd server && npm run seed",
+    "heroku-postbuild": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/scottskinn/Coder-thoughts/issues"
-  },
-  "homepage": "https://github.com/scottskinn/Coder-thoughts#readme",
-  "devDependencies": {
-    "concurrently": "^7.1.0"
-  },
   "dependencies": {
-    "react-router-dom": "^5.3.0"
-  }
+    "if-env": "^1.0.4"
+  },
+  "devDependencies": {
+    "concurrently": "^5.1.0"
+  },
+  "description": ""
 }
