--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "core-js": "^3.26.1",
     "if-env": "^1.0.4"
   },
   "devDependencies": {
